--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:h2:mem:feiravirtualdb
+spring.datasource.url=jdbc:h2:mem:sampledb
 spring.datasource.username=sa
 spring.datasource.password=
